@@ -27,6 +27,10 @@ LINKFLAGS += mcs51.lib libsdcc.lib liblong.lib libint.lib libfloat.lib
 OBJEXT = .rel
 BINEXT = .ihx
 
+# otherwise `make` deletes testfwk.o and `make -j` will fail
+.PRECIOUS: $(PORT_CASES_DIR)/%$(OBJEXT)
+
+# Required extras
 EXTRAS = $(PORT_CASES_DIR)/testfwk$(OBJEXT) $(PORT_CASES_DIR)/support$(OBJEXT)
 FWKLIB = $(PORT_CASES_DIR)/T2_isr$(OBJEXT)
 
